<resources>
    <string name="app_name">COVID ANALYZER MAP</string>
    <string name="covid_analyzer_map">COVID ANALYZER MAP</string>
    <string name="register">Register</string>


    <string name="register_with_us_to_be_informed_about_covid_19">Register with us to be informed about COVID-19</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>

    <string name="title_activity_maps">MapsActivity</string>

    <string name="sign_in_with_us_to_be_informed_about_covid_19">Sign in with us to be informed about Covid-19</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="verification">Verification</string>
    <string name="please_verify_your_email_to_be_able_to_continue">Please verify your email to be able to continue!</string>
    <string name="a_verification_link_has_been_sent_to_your_email">A verification link has been sent to your Email</string>
    <string name="Continue">Continue</string>
    <string name="report_of_status">Report of Status</string>
    <string name="biontech">Biontech</string>
    <string name="johnson_johnson">Johnson Johnson</string>
    <string name="moderna">Moderna</string>
    <string name="sinovac">Sinovac</string>
    <string name="astrazeneca">AstraZeneca</string>
    <string name="none">None</string>
    <string name="submit">Submit</string>
    <string name="specify_the_vaccine_s_you_took">Specify the vaccine(s) you took:</string>
    <string name="specify_the_covid_condition_s">Specify the covid condition(s):</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="contacted_before">Contacted Before</string>
    <string name="coronavirus_disease_covid_19_is_an_infectious_disease_caused_by_the_sars_cov_2_virus">Coronavirus disease (COVID-19) is an infectious disease caused by the SARS-CoV-2 virus</string>
    <string name="symptoms">Symptoms</string>
    <string name="the_infectious_disease_covid_19">The infectious disease Covid-19</string>


    <string name="skip">Skip</string>

    //Lottie1 text below

    //Headings
    <string name="heading_one">COVID-19</string>
    <string name="heading_two">Symptom#1</string>
    <string name="heading_three">Symptom#2</string>
    <string name="heading_fourth">Symptom#3</string>
    <string name="heading_fifth">Symptom#4</string>
    <string name="heading_sixth">Symptom#5</string>
    <string name="heading_seventh">Symptom#6</string>


    //Description
    <string name="desc_one">Coronavirus disease (COVID-19) is an infectious disease caused by the SARS-CoV-2 virus.
Most people infected with the virus will experience mild to moderate respiratory illness.</string>
    <string name="desc_two">COVID-19 symptoms, including fever, can start anywhere from 2 days to 2 weeks after exposure to the virus.According to the CDC, you have a fever if your temperature is 100.4°F (38°C) or greater.</string>
    <string name="desc_three">Known clinically as dyspnea, shortness of breath is one of the hallmark symptoms of COVID-19. This symptom can persist and quickly escalate in people with COVID-19.</string>
    <string name="desc_fourth">Dry cough means you’re coughing but nothing is coming up, like phlegm or mucus.Ultimately, it feels a lot like your lungs are irritated.</string>
    <string name="desc_fifth">Fatigue is very common after viral infections, such as COVID and normally it settles after 2 or 3 weeks. However, in some people it can linger for weeks or months.</string>
    <string name="desc_sixth">Paired with previously mentioned symptoms like Fever and Cough; a sore throat indicates the possibly of being infected with COVID-19.</string>
    <string name="desc_seventh">Diarrhoea is an early sign of COVID-19, starting on the first day of infection and building in intensity during the first week. It lasts 2-7 days in adults.</string>


    //lottie2 text below

    //precaution name
    <string name="pre_one">Get Vaccinated!</string>
    <string name="pre_two">Stay At Home</string>
    <string name="pre_third">Wash Hands</string>
    <string name="pre_fourth">Use Masks</string>
    <string name="pre_fifth">Use Hand Sanitizer</string>
    <string name="pre_sixth">Do NOT touch your Face</string>
    <string name="pre_seventh">Avoid Contacts</string>
    <string name="pre_eight">Avoid Crowd Places</string>
    <string name="pre_nine">Social Distancing</string>


    //description

    <string name="predesc_one">Ensure you are fully vaccinated including the booster shot.</string>
    <string name="predesc_two">It is better to quarantine yourself especially if you have any sypmtoms to protect yourself and others.</string>
    <string name="predesc_third">Wash your hands for at least 20 seconds with water and soap.</string>
    <string name="predesc_fourth">If you have to leave home, always keep your mask on.</string>
    <string name="predesc_fifth">Sanitize your hands before and after interacting with anything to lessen the chances of getting infected.</string>
    <string name="predesc_sixth"> Our hands carry a lot of germs from our day to day activities so avoid touching your face as much as possible.</string>
    <string name="predesc_seventh">Avoid getting in contact with people as much as possible, avoid handshakes or hugging.</string>
    <string name="predesc_eight">Avoid going to crowded places. More people = Higher chances of infection.</string>
    <string name="predesc_nine">If you must contact people or go outside ensure to maintain social distance for your and others safety.</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country:</string>

    <string name="symptoms_and_precautions">Symptoms &amp; Precautions</string>
    <string name="johnsonjohnsonFR">Johnson &amp; Johnson: 0.77%</string>
    <string name="johnsonjohnsonGE">Johnson &amp; Johnson: 2.12%</string>
    <string name="johnsonjohnsonUSA">Johnson &amp; Johnson: 3.33%</string>
    <string name="johnsonjohnsonUA">Johnson &amp; Johnson: 0.07%</string>

    <string name="a_center_to_reach_information_and_statistics_about_the_covid_19_pandemic_in_a_simple_and_user_friendly_way">A center to reach information and statistics about the COVID-19 pandemic in a simple and user-friendly way.</string>
    <string name="answered_johnson_and_johnson">  Johnson &amp; Johnson doses reported</string>
    <string name="aboutusp1"><![CDATA[This COVID ANALYZER MAP is the capstone project #1010315 for the SEN (software engineering) & ENM (management engineering) departments. The SEN department built the application using the ENM\'s analysed data.]]></string>
    <string name="aboutusp2">We hope this application will benefit the people and provide all the necessary information required.</string>




    //hyperlink

    <string name="hyperlink1">Resource #1: Corona Cases  \n<a href="https://disease.sh/docs/#/COVID-19%3A%20Worldometers/get_v3_covid_19_countries">www.disease.sh/covid19_countries</a> </string>
    <string name="hyperlink2">Resource #2: Detailed Corona Cases \n<a href="https://disease.sh/docs/#/COVID-19%3A%20Worldometers/get_v3_covid_19_countries__country_">www.disease.sh/covid19_country</a></string>
    <string name="hyperlink3">Resource #3: Vaccines\n<a href="https://disease.sh/docs/#/COVID-19%3A%20Vaccine/get_v3_covid_19_vaccine_coverage_countries">www.disease.sh/covid19_vaccinations</a></string>
    <string name="hyperlink4">Resource #4: Detailed Vaccines \n<a href="https://disease.sh/docs/#/COVID-19%3A%20Vaccine/get_v3_covid_19_vaccine_coverage_countries__country_">www.disease.sh/covid19_vaccinations_country</a></string>
    <string name="hyperlink5">Resource #5: Analyzed Data France \n<a href="https://www.data.gouv.fr/fr/">www.data.gouv.fr/fr/</a>\nDate: 10-MAR-2022</string>
    <string name="hyperlink6">Resource #6: Analyzed Data Germany \n<a href="https://en.wikipedia.org/wiki/COVID-19_vaccination_in_Germany">www.wikipedia.com/germany_vaccinations</a>\nDate: 11-MAR-2022</string>
    <string name="hyperlink7">Resource #7: Analyzed Data Ukraine \n<a href="https://www.statista.com/statistics/1243623/covid-19-vaccination-by-region-ukraine/">www.statista.com/vaccination_ukraine/</a>\nDate: 21-FEB-2022</string>
    <string name="hyperlink8">Resource #8: Analyzed Data USA \n<a href="https://ourworldindata.org/us-states-vaccinations">ourworldindata.org/us-vaccinations </a>\nDate: 12-JAN-2021 to 9-APR-2022</string>
    <string name="hyperlink9">Resource #9: Analyzed Data Variants \n<a href="https://www.healthdata.org/covid/covid-19-vaccine-efficacy-summary">www.healthdata.org/vaccine-efficacy </a>\nDate: 18-FEB-2022</string>



</resources>