<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivResourcesBackArrow_id"
            android:layout_width="44dp"
            android:layout_height="34dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_backbuttonsvg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="20"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/resourcepageicon"
                android:layout_marginTop="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="Resources"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/aboutuscard_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:strokeColor="#22000000"
                app:strokeWidth="1dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    >

                    <TextView
                        android:id="@+id/resource1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/hyperlink1"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink2"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink3"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink4"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink5"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink6"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink7"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink8"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/resource9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hyperlink9"
                        android:gravity="left"
                        android:textColor="#535353"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>