<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationPage">



    <TextView
        android:id="@+id/title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="85dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/covid_analyzer_map"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="174dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.01"
        android:text="@string/verification"
        android:textAlignment="center"
        android:textColor="#FF647C"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_id" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_id"
        app:srcCompat="@drawable/robotimage" />

    <TextView
        android:id="@+id/verify_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/please_verify_your_email_to_be_able_to_continue"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_id" />

    <TextView
        android:id="@+id/verifytext_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/a_verification_link_has_been_sent_to_your_email"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/bt_continue_id"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/capbuttonpressselector"
        android:enabled="true"
        android:letterSpacing="0.02"
        android:onClick="gotosigninpage"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifytext_id" />

</androidx.constraintlayout.widget.ConstraintLayout>